--- a/fetch/Apple_stock.json
+++ b/fetch/Apple_stock.json
@@ -11835,7 +11835,7 @@
             "n": 541838
         }
     ],
-    "status": "DELAYED",
-    "request_id": "95758e9a109af4d0d3a9e304cf47480c",
+    "status": "OK",
+    "request_id": "bf6d95a042db07a0a6e44452c0f0fe40",
     "count": 1183
 }
